--- a/Sistema/src/principal.form
+++ b/Sistema/src/principal.form
@@ -123,7 +123,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
                       <Component id="jTextFieldBuscarExamen" min="-2" pref="252" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="jButton1" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Component id="jScrollPane2" min="-2" pref="512" max="-2" attributes="0"/>
@@ -300,6 +300,10 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="jTextField1CICliente">
+      <Properties>
+        <Property name="focusCycleRoot" type="boolean" value="true"/>
+        <Property name="focusTraversalPolicyProvider" type="boolean" value="true"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="jButton1BUSCAR">
       <Properties>
